# Bull-machine-

./: .bm_state.json  .bumpversion.cfg  .cleanup_plan.txt  .env.example  .gitignore  .pre-commit-config.yaml  ARCHETYPE_A_SPRING_FIX_REPORT.md  ARCHETYPE_CLEANUP_QUICK_REFERENCE.md  ARCHETYPE_FEATURE_REQUIREMENTS.md  ARCHETYPE_INVESTIGATION_SUMMARY.md  ARCHETYPE_KNOWLEDGE.md  ARCHETYPE_VALIDATION_AND_PRODUCTION_READINESS_REPORT.md  ARCHETYPE_WIRING_CONSISTENCY_REPORT.md  ARCHITECTURE_VERIFICATION_ONE_SOUL.md  ATR_OPTIMIZATION_GUIDE.md  BASELINE_SUITE_IMPLEMENTATION_REPORT.md  BATCH_SCREENER_IMPLEMENTATION.md  BEAR_ARCHETYPES_PHASE1_IMPLEMENTATION.md  BEAR_ARCHETYPES_ZERO_MATCHES_DIAGNOSIS.md  BEAR_ARCHETYPE_IMPLEMENTATION_STATUS_REPORT.md  BULL_ARCHETYPES_MVP_REPORT.md  BULL_ARCHETYPES_QUICK_START.md  CAPITAL_ALLOCATION_STRATEGY.md  CHANGELOG.md  CLAUDE.md  CLEANUP_EXECUTION_SUMMARY.md  CLEANUP_PLAN.md  CLEANUP_QUICK_START.md  CMI_CONFIG_TUNING_GUIDE.md  CODE_REVIEW_IMPROVEMENTS.md  COMMIT_QUICK_START.md  COMPREHENSIVE_MULTI_REGIME_OPTIMIZATION_ROADMAP.md  CONTRIBUTING.md  CURRENT_STATE_QUICK_REFERENCE.md  DATA_DOWNLOAD_README.md  DEPLOYMENT_COMPLETE_FINAL_REPORT.md  DEPLOYMENT_GUIDE_INDEX.md  DEPLOYMENT_READY_95_PERCENT.txt  DEPRECATED_ARCHETYPES.md  DERIVATIVES_FETCH_GUIDE.md  (+285 more)
.github/: pull_request_template.md
IMPROVEMENT_PLANS/: S1_LIQUIDITY_VACUUM_IMPROVEMENT_PLAN.md  S4_FUNDING_DIVERGENCE_IMPROVEMENT_PLAN.md
_known_good/: baseline_exits_off.json  baseline_exits_on.json
archive/: ROLLBACK_POINTER
balanced_v14_results/: enhanced_v14_chart_logs2_test_equity.csv  enhanced_v14_chart_logs2_test_report.md
baseline_comparison_results/: baseline_no_exit_signals_report.md  baseline_no_exit_signals_summary.json
btc_comprehensive_results/: btc_comprehensive_backtest_report.md  btc_comprehensive_backtest_summary.json  btc_comprehensive_backtest_trades.csv
btc_extended_results/: btc_extended_backtest_equity.csv  btc_extended_backtest_report.md  btc_extended_backtest_summary.json  btc_extended_backtest_trades.csv
bull_machine/: __init__.py  oracle.py  version.py
bull_machine.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
calibrated_v14_results/: enhanced_v14_chart_logs2_test_report.md
chart_logs2_results/: comprehensive_chart_logs2_backtest_equity.csv  comprehensive_chart_logs2_backtest_summary.json
config/: config.json
configs/: README.md  adaptive_regime_config.json  archetype_feature_flags_v10.json  archetype_optimization_parameter_matrix.json  archetype_overrides_pf20.json  archetype_regime_gates.yaml  baseline_btc_adaptive_pr6b.json  baseline_btc_bull_pf20.json  baseline_btc_bull_regime_routed_v1.json  bear_market_2022_test.json  btc_v7_ml_calibrated_2024.json  btc_v7_ml_enabled.json  btc_v8_adaptive.json  btc_v8_adaptive_locked_parity.json  btc_v8_candidate.json  bull_machine_isolated_v11.json  bull_machine_isolated_v11_fixed.json  champion_paper.json  circuit_breaker_disabled.json  circuit_breaker_example.json  experiment_btc_1h_2020_2025.json  experiment_template.json  liquidity_vacuum_baseline_2022.json  liquidity_vacuum_v2_loose.json  optimized_bull_v2_production.json  profile_archetype_candidate.json  profile_archetype_optimized.json  profile_btc_seed.json  profile_default.json  profile_eth_seed.json  profile_eth_ultraloose.json  profile_eth_ultraloose_v2.json  profile_eth_v1.json  profile_experimental.json  profile_production.json  profile_spy_seed.json  proper_test_fixed_params.json  quick_fix_2022_regime_override.json  quick_test_optimized.json  quick_test_optimized_v2.json  (+34 more)
conservative_chart_logs2_results/: conservative_chart_logs2_backtest_equity.csv  conservative_chart_logs2_backtest_trades.csv
dashboard/: index.html  package.json  vite.config.ts
debug_test_output/: floor_sweep_debug_report.md  floor_sweep_debug_summary.json  validation_conservative_10k_equity.csv  validation_conservative_10k_report.md
debug_test_output2/: floor_sweep_debug_report.md
debug_time_stop_test/: force_trigger_time_stop_report.md  force_trigger_time_stop_trades.csv
debug_time_stop_test_longer/: force_trigger_time_stop_report.md
demo_results/: demo_btc_eth_results_equity.csv  demo_btc_eth_results_report.md  demo_btc_eth_results_trades.csv
deploy/: .env.coinbase.template  .server_info  README.md  coinbase-paper.service  daily-review.service  daily-review.timer  dashboard.service  deploy.sh  health_check.sh  health_check_equity.py  health_check_heartbeat.py  monitor_coinbase.sh  parity-check.service  parity-check.timer  provision_oracle.sh  setup_coinbase.sh  setup_oracle.sh
diagnostic_v14_results/: enhanced_v14_chart_logs2_test_report.md  enhanced_v14_chart_logs2_test_summary.json
docs/: ACCEPTANCE_CRITERIA_EXAMPLES.md  ADAPTIVE_WIRING_CHANGES.md  ALPHA_COMPLETENESS_VERIFICATION_REPORT.md  ALPHA_GAP_ACTION_PLAN.md  ARCHETYPE_CALIBRATION_ARCHITECTURE.md  ARCHETYPE_OPTIMIZATION_QUICK_REFERENCE.md  ARCHETYPE_OPTIMIZATION_REQUIREMENTS_SPEC.md  ARCHETYPE_SYSTEMS_PRODUCTION_GUIDE.md  ARCHITECTURE.md  ARCHITECTURE_COMPARISON.md  ARCH_REVIEW_NOTES.md  BASELINE_SUITE_GUIDE.md  BEAR_ARCHETYPE_OPTIMIZATION_ARCHITECTURE.md  BEAR_PATTERNS_QUICK_REFERENCE.md  BRAIN_BLUEPRINT_SNAPSHOT_v2.md  BULL_MACHINE_V2_PIPELINE.md  CAPITAL_ALLOCATION_STRATEGY.md  CHANGELOG_BULL_MACHINE_V2.md  CIRCUIT_BREAKER_INTEGRATION_GUIDE.md  CI_GUARDRAILS_SPEC.md  DATA_VALIDATION_FRAMEWORK.md  DEV_WORKFLOW.md  DOCUMENTATION_COMPLETE_SUMMARY.md  DUAL_SYSTEM_ARCHITECTURE.md  DUAL_SYSTEM_DEPLOYMENT_ROADMAP.md  DUAL_SYSTEM_QUICK_START.md  EMPIRICAL_GUARDRAILS_METHODOLOGY.md  FEATURE_STORE_SCHEMA_v2.md  FIB_TIME_CLUSTER_SPEC.md  FUSION_PIPELINE_AUDIT.md  FUTURE_INTEGRATION_DESIGN.md  GHOST_TO_LIVE_ARCHITECTURE.md  HYBRID_REGIME_DETECTION_ARCHITECTURE.md  INSTITUTIONAL_STRUCTURE.md  LIQUIDITY_SCORE_SPEC.md  LIVE_READY_FEATURE_ARCHITECTURE.md  LIVE_READY_IMPLEMENTATION_GUIDE.md  LIVE_READY_QUICK_REFERENCE.md  MACRO_FEATURE_SPEC.md  MACRO_FUSION_ML_GUIDE.md  (+58 more)
engine/: calculators.py  event_calendar.py  feature_flags.py  (+5 more)
(+2283 files in other folders)
