[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bull-machine"
version = "1.7.2"
description = "Advanced multi-domain confluence trading system"
authors = [{name = "Bull Machine Team", email = "team@bullmachine.ai"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["trading", "algorithmic-trading", "confluence", "technical-analysis", "quantitative-finance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "quantlib>=1.31",
    "TA-Lib>=0.4.25",
    "pyyaml>=6.0",
    "structlog>=23.1.0",
    "python-dotenv>=1.0.0",
    "numba>=0.57.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.0.280",
    "mypy>=1.5.0",
]
api = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
]
db = [
    "sqlalchemy>=2.0.0",
    "alembic>=1.11.0",
]
docs = [
    "sphinx>=7.0.0",
]

[project.scripts]
bull-machine = "analyze_btc_production:main"
bull-backtest = "bin.production_backtest:main"
bull-analyze = "scripts.research.analyze_btc_with_bull_machine:main"
bull-confluence = "run_complete_confluence_system:main"

[project.urls]
"Bug Reports" = "https://github.com/bullmachine/bull-machine/issues"
"Source" = "https://github.com/bullmachine/bull-machine"
"Documentation" = "https://docs.bullmachine.ai"

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["reports", ".*results.*", ".git", ".venv", "data"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.ruff]
line-length = 120  # Pragmatic increase to reduce E501 warnings
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501", # line too long, handled by formatter
    "B008", # do not perform function calls in argument defaults
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "ta.*"
ignore_missing_imports = true

[tool.coverage.run]
source = ["bull_machine"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/venv/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\(Protocol\\):",
    "@(abc\\.)?abstractmethod",
]